--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@metaplex/js": "^4.12.0",
+    "@solana/web3.js": "^1.41.4",
     "bootstrap": "^5.1.3",
     "ngx-clipboard": "^15.1.0",
     "ngx-toastr": "^14.3.0",
