--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@metaplex/js": "^4.12.0",
+    "@solana/wallet-adapter-phantom": "^0.9.2",
     "@solana/web3.js": "^1.41.4",
     "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
+    "nft.storage": "^6.2.0",
     "ngx-clipboard": "^15.1.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~6.6.0",
@@ -33,7 +36,7 @@
     "@angular/cli": "~12.2.15",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.52",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
