calendly popup added at landing page

--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,8 @@
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "src/assets/js/calendly.js"
             ],
             "allowedCommonJsDependencies": [
               "lodash"
@@ -116,7 +117,8 @@
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "src/assets/js/calendly.js"
             ]
           }
         }
